<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/total_cost_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:hint="@string/total_cost_text"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/service_question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_question_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_cost_edit_text" />

    <RadioGroup
        android:id="@+id/tip_selection_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/service_question_text_view">

        <RadioButton
            android:id="@+id/selected_20_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/selected_20_percent_text" />

        <RadioButton
            android:id="@+id/selected_15_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selected_15_percent_text" />

        <RadioButton
            android:id="@+id/selected_10_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selected_10_percent_text" />
    </RadioGroup>

    <Switch
        android:id="@+id/round_cost_switch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/round_cost_switch_text"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_selection_radio_group" />

    <Button
        android:id="@+id/calculate_cost_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="calculate"
        android:text="@string/calculate_cost_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/round_cost_switch" />

    <Button
        android:id="@+id/openMyTipsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_my_tips_button_text"
        android:onClick="onOpenMyTips"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_cost_button" />
</androidx.constraintlayout.widget.ConstraintLayout>